# student-distribution

./: Dockerfile  docker-compose.yml  pyproject.toml
attached_assets/: Pasted--uv-run-python-src-main-py-Traceback-most-recent-call-last-File-C-Users-malko-PycharmProjec-1749793405011_1749793405011.txt
model/: recsys_model_best.pth  stack_vocab.json
src/: config.py  main.py
src/api/: dependencies.py
src/api/endpoints/: recommendations.py
src/db/: __init__.py  company_repository.py  database.py  models.py  project_repository.py  repositories.py  repository.py  student_repository.py  team_repository.py
src/models/: recsys_model.pth  roles_vocab.json  stack_vocab.json
src/services/: ii.py  model_loader.py  recommendation_engine.py  recommendation_model.py  recommendation_service.py  synthetic.py
src/tests/services/: test_recommendation_engine.py
synthetic/: projects.csv  students.csv  team_compatibility.csv  teams.csv
