[project]
name = "distribution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.38.30",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "pandas>=2.3.0",
    "pydantic-settings>=2.9.1",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.41",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
]
